--- a/style.css
+++ b/style.css
@@ -1,10 +1,26 @@
- button {
-	color: red;
-	border-radius: 5px;
-	padding: 20px;
-	margin: 20px;
+button {
+    color: #FFF;
+    background-color: rgba(255, 0, 0, 0.75);
+    border-radius: 5px;
+    padding: 100px;
+    margin: 50px;
+    text-align: center;
+    font-size: 20px;
+}
+
+button:hover {
+	background-color: rgba(255, 0, 0, 0.9);
 }
 
 a {
-	display: inline-block;
+    display: inline-block;
+}
+
+#title {
+	text-align: center;
+}
+
+#table {
+	table-layout: fixed;
+	text-align: center
 }
