--- a/style.css
+++ b/style.css
@@ -18,9 +18,61 @@ a {
 
 #title {
 	text-align: center;
+    background-color: #66ccff;
+    margin: 0;
+    padding: 0;
+    font-size: 40px;
 }
 
 #table {
 	table-layout: fixed;
 	text-align: center
+}
+
+#pictures {
+    align-content: center;
+    width: 25%;
+}
+
+#about {
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 30px;
+    line-height: 1.6;
+    width:45%;
+    text-align: left;
+    border-left: solid grey;
+    border-right: solid grey;
+    padding-top: 0;
+}
+
+#owners {
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 30px;
+    line-height: 1.6;
+    margin-right: 10px;
+    margin-top: 30px;
+    width: 20%;
+    text-align: right;
+}
+
+#footer {
+    clear: both;
+    font-family: Helvetica, Arial, sans-serif;
+    background-color: #999999;
+    text-align: right;
+    color: white;
+    font-size: 1.4rem;
+}
+
+.column {
+    float: left;
+}
+
+hr{
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    background-color: #FADBD8 ;
 }
