--- a/activities/style.css
+++ b/activities/style.css
@@ -1,9 +1,17 @@
 button {
-    
+    color: #FFF;
+    background-color: rgba(255, 0, 0, 0.75);
+    border-radius: 5px;
+    padding: 100px;
+    margin: 50px;
+    text-align: center;
+    font-size: 20px;
+    clear: both;
+    align-content: center;
 }
 
 button:hover {
-	background-color: rgba(255, 0, 0, 0.9);
+    background-color: rgba(255, 0, 0, 0.9);
 }
 
 a {
