--- a/calculator/style.css
+++ b/calculator/style.css
@@ -7,7 +7,7 @@
 body {
 	padding: 0;
 	margin: 0;
-	background: linear-gradient(to left, #5DADE2, #212F3C 50%, #5DADE2);
+	background: #FADBD8;
 }
 
 .calculator-grid{
@@ -55,4 +55,69 @@ body {
 .output .current-operation {
 	color: white;
 	font-size: 2.5rem;
+}
+
+#butt {
+	color: #FFF;
+    background-color: rgba(255, 0, 0, 0.75);
+    border-radius: 5px;
+    padding: 100px;
+    margin: 50px;
+    text-align: center;
+    font-size: 20px;	
+}
+
+#butt:hover {
+	background-color: rgba(255, 0, 0, 0.9);
+	align-content: center;
+}
+
+#column {
+	float: left;
+	width: 33%;
+}
+
+#title {
+	text-align: center;
+    background-color: #66ccff;
+    margin: 0;
+    padding: 0;
+    font-size: 40px;
+}
+
+.conversions {
+	font-family: Helvetica, Arial, sans-serif;
+	text-align: center;
+	line-height: 1.6;
+	font-size: 1.3rem;
+	padding-top: 150px;
+}
+
+.formula {
+	font-family: Helvetica, Arial, sans-serif;
+	text-align: center;
+	line-height: 1.6;
+	font-size: 1.3rem;
+	padding-top: 150px;
+}
+
+#content {
+	text-align: center;
+    margin: 0;
+    padding: 0;
+    font-size: 40px;
+}
+
+#footer {
+    clear: both;
+    font-family: Helvetica, Arial, sans-serif;
+    background-color: #999999;
+    text-align: right;
+    color: white;
+    font-size: 1.4rem;
+}
+
+#centered {
+	width: 50%;
+	clear: both;
 }
