--- a/search up/style.css
+++ b/search up/style.css
@@ -38,6 +38,12 @@ button:hover {
 	font-size: 1.5rem;
 }
 
+.text-in {
+    width: 500px;
+    height: 100px;
+    font-size: 1.5rem;
+}
+
 #btn {
 	color: #FFF;
     background-color: rgba(255, 0, 0, 0.75);
