--- a/style.css
+++ b/style.css
@@ -1,3 +1,78 @@
+@media(min-width: 1700px){
+    #pictures {
+        align-content: center;
+        width: 25%;
+        flex: 1;
+        order: 1;
+    }
+
+    #about {
+        font-family: Helvetica, Arial, sans-serif;
+        font-size: 30px;
+        line-height: 1.6;
+        width:45%;
+        text-align: left;
+        padding-top: 0;
+        flex: 2;
+        order: 2;
+    }
+
+    #owners {
+        font-family: Helvetica, Arial, sans-serif;
+        font-size: 30px;
+        line-height: 1.6;
+        margin-right: 10px;
+        margin-top: 30px;
+        width: 20%;
+        text-align: right;
+        flex: 1;
+        order: 3;
+    }
+
+    #columns {
+        display: flex;
+        align-items: center;
+    }
+}
+
+#pictures {
+    align-content: center;
+    width: 25%;
+    display: inline;
+}
+
+#about {
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 30px;
+    line-height: 1.6;
+    /*
+    width:45%; 
+    */
+    text-align: center;
+    padding-top: 10px;
+}
+
+#owners {
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 30px;
+    line-height: 1.6;
+    /*
+    margin-right: 10px;
+    margin-top: 30px;
+    width: 20%;
+    */
+    padding-top: 10px;
+    padding-bottom: 10px;
+    text-align: center;
+}
+
+#columns {
+    /*
+    display: flex;
+    align-items: center; 
+    */
+}
+
 button {
     color: #FFF;
     background-color: rgba(255, 0, 0, 0.75);
@@ -24,37 +99,6 @@ a {
     font-size: 40px;
 }
 
-#table {
-	table-layout: fixed;
-	text-align: center
-}
-
-#pictures {
-    align-content: center;
-    width: 25%;
-}
-
-#about {
-    font-family: Helvetica, Arial, sans-serif;
-    font-size: 30px;
-    line-height: 1.6;
-    width:45%;
-    text-align: left;
-    border-left: solid grey;
-    border-right: solid grey;
-    padding-top: 0;
-}
-
-#owners {
-    font-family: Helvetica, Arial, sans-serif;
-    font-size: 30px;
-    line-height: 1.6;
-    margin-right: 10px;
-    margin-top: 30px;
-    width: 20%;
-    text-align: right;
-}
-
 #footer {
     clear: both;
     font-family: Helvetica, Arial, sans-serif;
@@ -62,10 +106,6 @@ a {
     text-align: right;
     color: white;
     font-size: 1.4rem;
-}
-
-.column {
-    float: left;
 }
 
 hr{
