--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@
     width:45%; 
     */
     text-align: center;
-    padding-top: 10px;
+    padding: 20px;
 }
 
 #owners {
@@ -61,8 +61,7 @@
     margin-top: 30px;
     width: 20%;
     */
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding: 20px;
     text-align: center;
 }
 
